Added javascript code and changed some styles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div id="score-display" style="display: block;">
+        <div id="score-wrapper" style="display: none;">
             <img src="./img/1.png" alt="" id="score-img">
             <p id="score">100%</p>
             <p id="score-message">日本語がお上手ですね。</p>
